update function BindPlanToTrainCommand BCh.Ktc.Nde.MiddleTier.dll(1.0.0.1)

--- a/NdeWcfOverWinService/app.config
+++ b/NdeWcfOverWinService/app.config
@@ -1,26 +1,33 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <section name="engine" type="NdeDataClasses.Configuration.EngineConfigurationSection, NdeDataClasses" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true" requirePermission="true" />
+  </configSections>
   <connectionStrings>
-    <!--
-    <add name="gidDb" connectionString="Dialect=3;Database=localhost:C:\Неман\Могилев-Езерище\Events\GID.GDB;User Id=NEMAN;Password=NEMAN" />
-    -->
+
     <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Могилев-Езерище\Events\GID.GDB;User Id=NEMAN;Password=NEMAN"/>
     <add name="buhDb" connectionString="data source=10.23.101.88\SqlExpress;database=Buh3Asoup;User ID=sa;Password=1;Trusted_Connection=false;"/>
+
   </connectionStrings>
-
   <appSettings>
-    <!-- Для какой машины выдавать команды, если параметр не пропиман то для всех -->
-    <add key="IpCommand" value="10.23.101.81" />
-
+    <add key="deltaTimeStart" value="25" />
+    <add key="deltaTimeStop" value="20" />
+    <add key="IpCommand" value="127.0.0.1" />
   </appSettings>
-  
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.0" />
   </system.web>
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
-        <binding name="NdeServicesBinding">
+        <binding  name="NdeServicesBinding" maxBufferSize="2147483647"
+                maxBufferPoolSize="2147483647"
+                maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32"
+                                 maxStringContentLength="2147483647"
+                                 maxArrayLength="2147483647"
+                                 maxBytesPerRead="2147483647"
+                                 maxNameTableCharCount="2147483647" />
           <security mode="None"/>
         </binding>
       </netTcpBinding>
@@ -29,13 +36,13 @@
       <service name="NdeServices.NdeService" behaviorConfiguration="NdeWcfOverWinService.ServiceBehavior">
         <endpoint address="" binding="netTcpBinding" behaviorConfiguration="" contract="NdeServices.INdeService" bindingConfiguration="NdeServicesBinding">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexTcpBinding" behaviorConfiguration="" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexTcpBinding" behaviorConfiguration="" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:15200/NdeWcfOverWinService"/>
+            <add baseAddress="net.tcp://localhost:15200/NdeWcfOverWinService" />
           </baseAddresses>
         </host>
       </service>
@@ -49,7 +56,16 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
-  </startup>
+  <engine>
+    <buhSections>
+      <buhSection stationName="Медведка" nsuNumber="5" rewriteStation="160002" />
+      <buhSection stationName="Лучеса1Ч" nsuNumber="10" rewriteStation="160002" />
+      <buhSection stationName="Лучеса2Ч" nsuNumber="9" rewriteStation="160002" />
+      <buhSection stationName="Могилев1Н" nsuNumber="3" rewriteStation="156505" />
+      <buhSection stationName="Могилев1НД" nsuNumber="2" rewriteStation="156609" />
+      <buhSection stationName="Чепино1Н" nsuNumber="8" rewriteStation="160002" />
+      <buhSection stationName="Чепино1НД" nsuNumber="7" rewriteStation="160002" />
+    </buhSections>
+  </engine>
+
 </configuration>
