--- a/NdeDataClasses/NdeDataClasses.csproj
+++ b/NdeDataClasses/NdeDataClasses.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActualTrain.cs" />
+    <Compile Include="BindPlanToTrainAnswer.cs" />
     <Compile Include="ComDefAppendix.cs" />
     <Compile Include="ComDefinition.cs" />
     <Compile Include="Commands\AssignMessForTrainCommand.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Commands\WriteEnterExecutedPlanCommand.cs" />
     <Compile Include="Commands\WriteTrainInputCommand.cs" />
     <Compile Include="Commands\WriteTrainOutputCommand.cs" />
+    <Compile Include="BaseCommandAnswer.cs" />
     <Compile Include="Configuration\BuhSection.cs" />
     <Compile Include="Configuration\BuhSectionCollection.cs" />
     <Compile Include="Configuration\BuhSectionElement.cs" />
