NdeDataClasses.dll - version  - 1.0.0.2, MiddleTier.dll - version - 1.0.0.2
 NdeDataClasses.dll - version  - 1.0.0.2
In Class GidMessage add field - 'TechStop'
In BindPlanToTrainAnswer add field - 'DelPlanIdn'

MiddleTier.dll - version - 1.0.0.2
MiddleTier update function BindPlanToTrain

--- a/NdeDataClasses/NdeDataClasses.csproj
+++ b/NdeDataClasses/NdeDataClasses.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="ActualTrain.cs" />
     <Compile Include="BindPlanToTrainAnswer.cs" />
+    <Compile Include="CleanPlanAnswer.cs" />
     <Compile Include="ComDefAppendix.cs" />
     <Compile Include="ComDefinition.cs" />
     <Compile Include="Commands\AssignMessForTrainCommand.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="Configuration\EngineConfigurationSection.cs" />
     <Compile Include="GIDMessage.cs" />
     <Compile Include="PlanEvent.cs" />
+    <Compile Include="SetDefSendFlagAnswer.cs" />
     <Compile Include="TrackPointMessage.cs" />
     <Compile Include="TrainEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
