BCh.Ktc.Nde.MiddleTier 1.0.0.4 Add in config - 'nodeEsr', optimization request for lastTrainsEvents

--- a/NdeWcfOverWinService/app.config
+++ b/NdeWcfOverWinService/app.config
@@ -12,7 +12,8 @@
   <appSettings>
     <add key="deltaTimeStart" value="25" />
     <add key="deltaTimeStop" value="20" />
-    <add key="IpCommand" value="127.0.0.1" />
+    <!-- Список кодов еср, по которым не сравниваются плановые нитки -->
+    <add key="nodeEsr" value="160727, 160712"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
