--- a/NdeWcfOverWinService/app.config
+++ b/NdeWcfOverWinService/app.config
@@ -4,32 +4,35 @@
     <section name="engine" type="NdeDataClasses.Configuration.EngineConfigurationSection, NdeDataClasses" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true" requirePermission="true" />
   </configSections>
   <connectionStrings>
-
-    <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Могилев-Езерище\Events\GID.GDB;User Id=NEMAN;Password=NEMAN"/>
-    <add name="buhDb" connectionString="data source=10.23.101.88\SqlExpress;database=Buh3Asoup;User ID=sa;Password=1;Trusted_Connection=false;"/>
-
+    <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Могилев-Езерище\Events\GID.GDB;User Id=NEMAN;Password=NEMAN" />
+    <add name="buhDb" connectionString="data source=10.23.101.88\SqlExpress;database=Buh3Asoup;User ID=sa;Password=1;Trusted_Connection=false;" />
   </connectionStrings>
   <appSettings>
     <add key="deltaTimeStart" value="25" />
     <add key="deltaTimeStop" value="20" />
     <!-- Список кодов еср, по которым не сравниваются плановые нитки -->
-    <add key="nodeEsr" value="160300, 160002"/>
+    <add key="nodeEsr" value="160300, 160002" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
   </system.web>
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
-        <binding  name="NdeServicesBinding" maxBufferSize="2147483647"
-                maxBufferPoolSize="2147483647"
-                maxReceivedMessageSize="2147483647">
-          <readerQuotas maxDepth="32"
-                                 maxStringContentLength="2147483647"
-                                 maxArrayLength="2147483647"
-                                 maxBytesPerRead="2147483647"
-                                 maxNameTableCharCount="2147483647" />
-          <security mode="None"/>
+        <binding name="NdeServicesBinding" maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+          <security mode="None" />
         </binding>
       </netTcpBinding>
     </bindings>
@@ -51,8 +54,8 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="NdeWcfOverWinService.ServiceBehavior">
-          <serviceMetadata httpGetEnabled="false"/>
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceMetadata httpGetEnabled="false" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -68,5 +71,4 @@
       <buhSection stationName="Чепино1НД" nsuNumber="7" rewriteStation="160002" />
     </buhSections>
   </engine>
-
 </configuration>
