--- a/NdeWcfOverWinService/NdeWcfOverWinService.csproj
+++ b/NdeWcfOverWinService/NdeWcfOverWinService.csproj
@@ -62,14 +62,16 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -103,8 +105,6 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="NdeWcfOverWinService_1_TemporaryKey.pfx" />
-    <None Include="NdeWcfOverWinService_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
