Versin 1.0.0.6 - Add function UpdatePathInPlanDefCommand

--- a/NdeDataClasses/NdeDataClasses.csproj
+++ b/NdeDataClasses/NdeDataClasses.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Commands\StopMessForTrainCommand.cs" />
     <Compile Include="Commands\TrackPointMessagesCommand.cs" />
     <Compile Include="Commands\TrainProcessCommand.cs" />
+    <Compile Include="Commands\UpdatePathInPlanDefCommand.cs" />
     <Compile Include="Commands\WriteEnterExecutedPlanCommand.cs" />
     <Compile Include="Commands\WriteTrainInputCommand.cs" />
     <Compile Include="Commands\WriteTrainOutputCommand.cs" />
