--- a/NdeWcfOverWinService/app.config
+++ b/NdeWcfOverWinService/app.config
@@ -12,6 +12,8 @@
     <add key="deltaTimeStop" value="20" />
     <!-- Список кодов еср, по которым не сравниваются плановые нитки -->
     <add key="nodeEsr" value="160300, 160002" />
+	<!-- Интервал связывания плановой и исполненной ниток -->
+	<add key="maxMinuteBind" value="60" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
