In GidRepos update function 'UpdatePathInPlanDefCommand' comment command deleteCommandAUDP

--- a/NdeWcfOverWinService/app.config
+++ b/NdeWcfOverWinService/app.config
@@ -4,7 +4,7 @@
     <section name="engine" type="NdeDataClasses.Configuration.EngineConfigurationSection, NdeDataClasses" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true" requirePermission="true" />
   </configSections>
   <connectionStrings>
-    <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Могилев-Езерище\Events\GID.GDB;User Id=NEMAN;Password=NEMAN" />
+    <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Витебск-Узел\Events\GID.GDB;User Id=NEMAN;Password=NEMAN" />
     <add name="buhDb" connectionString="data source=10.23.101.88\SqlExpress;database=Buh3Asoup;User ID=sa;Password=1;Trusted_Connection=false;" />
   </connectionStrings>
   <appSettings>
