--- a/NdeDataClasses/NdeDataClasses.csproj
+++ b/NdeDataClasses/NdeDataClasses.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrainMessage.cs" />
     <Compile Include="TrainWorking.cs" />
+    <Compile Include="UpdatePathInPlanDefAnswer.cs" />
     <Compile Include="WorkMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
