--- a/NdeWcfOverWinService/app.config
+++ b/NdeWcfOverWinService/app.config
@@ -4,7 +4,7 @@
     <section name="engine" type="NdeDataClasses.Configuration.EngineConfigurationSection, NdeDataClasses" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true" requirePermission="true" />
   </configSections>
   <connectionStrings>
-    <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Витебск-Узел\Events\GID.GDB;User Id=NEMAN;Password=NEMAN" />
+    <add name="gidDb" connectionString="Dialect=3;Database=10.23.101.88:C:\Неман\Жлобин-Житковичи\Events\GID.GDB;User Id=NEMAN;Password=NEMAN" />
     <add name="buhDb" connectionString="data source=10.23.101.88\SqlExpress;database=Buh3Asoup;User ID=sa;Password=1;Trusted_Connection=false;" />
   </connectionStrings>
   <appSettings>
@@ -72,5 +72,14 @@
       <buhSection stationName="Чепино1Н" nsuNumber="8" rewriteStation="160002" />
       <buhSection stationName="Чепино1НД" nsuNumber="7" rewriteStation="160002" />
     </buhSections>
+
+    <trimmedEvents>
+
+      <event id="1" station="152171" type="dep" ndo="1Н"/>
+      <event id="2" station="153301" type="arr" ndo="1Ч"/>
+      <event id="3" station="153301" type="dep" ndo="1Ч"/>
+      
+      
+    </trimmedEvents>
   </engine>
 </configuration>
